--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,126 +1,126 @@
-
-        * {
-            margin: 0px;
-            padding: 0px;
-        }
-
-
-        body {
-            height: 100vh;
-            width: 100vw;
-            background-color: #f5f5f5;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            display: flex;
-            flex-direction: column;
-            justify-content: start;
-            align-items: center;
-        }
+* {
+    margin: 0px;
+    padding: 0px;
+}
 
 
-        .section1 {
-            width: 70%;
-            height: 12rem;
-            background-color: aquamarine;
-            display: flex;
-            flex-direction: row;
-            justify-content: center;
-            align-items: center;            
-            padding: 10px;
-        }
+body {
+    height: 100vh;
+    width: 100vw;
+    background-color: #f5f5f5;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+}
 
 
-        .profile-img-section {
-            width: 40%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+.section1 {
+    width: 70%;
+    height: 12rem;
+    background-color: aquamarine;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: auto;
+}
 
 
-        .profile-data {
-            width: 40%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: flex-start;
-        }
+.profile-img-section{
+    width: 40%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
 
 
-        .profile-img {
-            height: 8rem;
-            width: 8rem;
-            border-radius: 50%;
-        }
+.profile-data {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
 
 
-        .section2 {
-            width: 70%;
-            height: 12rem;
-            /* background-color: aquamarine; */
-            border: 1px solid aquamarine;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: start;
-            /* padding: 10px; */
-            margin: 15px;
-            padding: 10px;
-        }
+.profile-img{
+    height: 8rem;
+    width: 8rem;
+    border-radius: 50%;
+}
 
 
-        .section3 {
-            width: 70%;
-            height: 20rem;
-            /* background-color: aquamarine; */
-            border: 1px solid aquamarine;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: start;
-            /* padding: 10px; */
-            margin: 15px;
-            padding: 10px;
-        }
+.section2 {
+    width: 70%;
+    height: 12rem;
+    /* background-color: aquamarine; */
+    border: 1px solid aquamarine;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    /* padding: 10px; */
+    margin: 15px;
+    padding: 10px;
+}
 
 
-        .section4 {
-            width: 70%;
-            height: 15rem;
-            /* background-color: aquamarine; */
-            border: 1px solid aquamarine;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: start;
-            /* padding: 10px; */
-            margin: 15px;
-            padding: 10px;
-        }
+.section3 {
+    width: 70%;
+    height: 20rem;
+    /* background-color: aquamarine; */
+    border: 1px solid aquamarine;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    /* padding: 10px; */
+    margin: 15px;
+    padding: 10px;
+}
 
 
-        .section-title {
-            /* height: 10%; */
-            color: aquamarine;
-            font-weight: bold;
-        }
+.section4 {
+    width: 70%;
+    height: 15rem;
+    /* background-color: aquamarine; */
+    border: 1px solid aquamarine;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    /* padding: 10px; */
+    margin: 15px;
+    padding: 10px;
+}
 
 
-        .ed-table {
-            width: 100%;
-            border: 1px solid gray;
-            border-collapse: collapse;
-        }
+.section-title {
+    /* height: 10%; */
+    color: aquamarine;
+    font-weight: bold;
+}
 
 
-        th,
-        td {
-            padding: 1rem;
-            border: 1px solid gray;
-        }
+.ed-table {
+    width: 100%;
+    border: 1px solid gray;
+    border-collapse: collapse;
+}
 
 
-        .companies {
-            font-weight: bold;
-            color: aquamarine;
-        }
+th,
+td {
+    padding: 1rem;
+    border: 1px solid gray;
+}
+
+
+.companies {
+    font-weight: bold;
+    color: aquamarine;
+}
