--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,25 +7,16 @@
 body {
     height: 100vh;
     width: 100vw;
-    background-color: #f5f5f5;
+    background-color: #dae5ba;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     display: flex;
     flex-direction: column;
     justify-content: start;
     align-items: center;
+    font-family: "Times New Roman", Times, serif;
 }
 
 
-.section1 {
-    width: 70%;
-    height: 12rem;
-    background-color: aquamarine;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: auto;
-}
 
 
 .profile-img-section{
@@ -53,12 +44,26 @@ body {
     border-radius: 50%;
 }
 
+.section1 {
+    width: 70%;
+    height: 12rem;
+    background: #16A085;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #F4D03F, #16A085);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #F4D03F, #16A085); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: auto;
+    color:#f5f5f5;
+    font-family: "Times New Roman", Times, serif;
+}
 
 .section2 {
     width: 70%;
     height: 12rem;
     /* background-color: aquamarine; */
-    border: 1px solid aquamarine;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -73,7 +78,6 @@ body {
     width: 70%;
     height: 20rem;
     /* background-color: aquamarine; */
-    border: 1px solid aquamarine;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -88,7 +92,6 @@ body {
     width: 70%;
     height: 15rem;
     /* background-color: aquamarine; */
-    border: 1px solid aquamarine;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -101,14 +104,15 @@ body {
 
 .section-title {
     /* height: 10%; */
-    color: aquamarine;
+    color: rgb(255, 255, 255);
     font-weight: bold;
 }
 
 
 .ed-table {
     width: 100%;
-    border: 1px solid gray;
+    border-style: solid;
+    border-color: #16A085;
     border-collapse: collapse;
 }
 
@@ -116,9 +120,17 @@ body {
 th,
 td {
     padding: 1rem;
-    border: 1px solid gray;
+    border-style: solid;
+    border-color: #22fc00;
+    color:#f5f5f5
 }
+table
+{
+    background: #12c2e9;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #f64f59, #c471ed, #12c2e9);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #f64f59, #c471ed, #12c2e9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
+}
 
 .companies {
     font-weight: bold;
