--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,9 +21,9 @@ body {
 
 .profile-img-section{
     width: 30%;
-    height: auto;
+    height: auto; 
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     
 }
@@ -47,19 +47,28 @@ body {
 
 .section1 {
     width: 70%;
-    height: 12rem;
+    height: 200rem;
     background: #16A085;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #F4D03F, #16A085);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, #F4D03F, #16A085); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+    padding: 1%;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: auto;
     color:#f5f5f5;
     font-family: "Times New Roman", Times, serif;
     border-radius: 10px;
+    box-shadow:
+  0.3px 0.3px 1.6px rgba(0, 0, 0, 0.03),
+  0.7px 0.7px 3.6px rgba(0, 0, 0, 0.058),
+  1.2px 1.2px 6.3px rgba(0, 0, 0, 0.085),
+  1.9px 1.9px 10px rgba(0, 0, 0, 0.111),
+  2.9px 2.9px 15.5px rgba(0, 0, 0, 0.134),
+  4.5px 4.5px 24.1px rgba(0, 0, 0, 0.156),
+  7.5px 7.5px 40px rgba(0, 0, 0, 0.178),
+  15px 15px 80px rgba(0, 0, 0, 0.26)
+;
 }
 
 .section2 {
@@ -127,14 +136,16 @@ td {
     border-color: #ffff00;
     color:#f5f5f5;
     justify-content: center;
+    text-align: center;
     align-items: center;
 }
 table
 {
-    border-radius: 10px;
+    
     background: #16A085;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #F4D03F, #16A085);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #F4D03F, #16A085); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: -webkit-linear-gradient(to right, #F4D03F, #16A085);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #F4D03F, #16A085); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    border-radius: 100px;
 
 }
 
@@ -142,3 +153,99 @@ background: linear-gradient(to right, #F4D03F, #16A085); /* W3C, IE 10+/ Edge, F
     font-weight: bold;
     color: aquamarine;
 }
+ul {
+    list-style: none;
+  }
+  
+  .example-2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .example-2 .icon-content {
+    margin: 0 10px;
+    position: relative;
+  }
+  .example-2 .icon-content .tooltip {
+    position: absolute;
+    top: -30px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: #fff;
+    padding: 6px 10px;
+    border-radius: 5px;
+    opacity: 0;
+    visibility: hidden;
+    font-size: 14px;
+    transition: all 0.3s ease;
+  }
+  .example-2 .icon-content:hover .tooltip {
+    opacity: 1;
+    visibility: visible;
+    top: -50px;
+  }
+  .example-2 .icon-content a {
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    color: #4d4d4d;
+    background-color: #fff;
+    transition: all 0.3s ease-in-out;
+  }
+  .example-2 .icon-content a:hover {
+    box-shadow: 3px 2px 45px 0px rgb(0 0 0 / 12%);
+  }
+  .example-2 .icon-content a svg {
+    position: relative;
+    z-index: 1;
+    width: 30px;
+    height: 30px;
+  }
+  .example-2 .icon-content a:hover {
+    color: white;
+  }
+  .example-2 .icon-content a .filled {
+    position: absolute;
+    top: auto;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    background-color: #000;
+    transition: all 0.3s ease-in-out;
+  }
+  .example-2 .icon-content a:hover .filled {
+    height: 100%;
+  }
+  
+  .example-2 .icon-content a[data-social="linkedin"] .filled,
+  .example-2 .icon-content a[data-social="linkedin"] ~ .tooltip {
+    background-color: #0274b3;
+  }
+  
+  .example-2 .icon-content a[data-social="github"] .filled,
+  .example-2 .icon-content a[data-social="github"] ~ .tooltip {
+    background-color: #24262a;
+  }
+  .example-2 .icon-content a[data-social="instagram"] .filled,
+  .example-2 .icon-content a[data-social="instagram"] ~ .tooltip {
+    background: linear-gradient(
+      45deg,
+      #405de6,
+      #5b51db,
+      #b33ab4,
+      #c135b4,
+      #e1306c,
+      #fd1f1f
+    );
+  }
+  .example-2 .icon-content a[data-social="youtube"] .filled,
+  .example-2 .icon-content a[data-social="youtube"] ~ .tooltip {
+    background-color: #ff0000;
+  }
+  
