--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,8 +5,8 @@
 
 
 body {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     background-color: #f4fae1;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     display: flex;
@@ -20,7 +20,7 @@ body {
 
 
 .profile-img-section{
-    width: 30%;
+    width: auto;
     height: auto; 
     display: flex;
     justify-content: start;
@@ -47,14 +47,14 @@ body {
 
 .section1 {
     width: 70%;
-    height: 200rem;
+    height: 7rem;
     background: #16A085;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #F4D03F, #16A085);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, #F4D03F, #16A085); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     padding: 1%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     color:#f5f5f5;
     font-family: "Times New Roman", Times, serif;
@@ -158,9 +158,14 @@ ul {
   }
   
   .example-2 {
-    display: flex;
+    display: flex-end;
+    flex-direction: column;
+    gap:10px;
     justify-content: center;
     align-items: center;
+    position: absolute;
+    bottom: 10px;
+
   }
   .example-2 .icon-content {
     margin: 0 10px;
@@ -248,4 +253,23 @@ ul {
   .example-2 .icon-content a[data-social="youtube"] ~ .tooltip {
     background-color: #ff0000;
   }
-  
+  *::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 5px;
+	background-color: #F5F5F5;
+    width: 10px;
+}
+
+*::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #F5F5F5;
+}
+
+*::-webkit-scrollbar-thumb
+{
+	border-radius: 5px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #e8cd5f;
+}
