--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,6 @@
 body {
     height: 100%;
     width: 100%;
-    background-color: #f4fae1;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     display: flex;
     flex-direction: column;
@@ -69,11 +68,13 @@ background: linear-gradient(to right, #F4D03F, #16A085); /* W3C, IE 10+/ Edge, F
   7.5px 7.5px 40px rgba(0, 0, 0, 0.178),
   15px 15px 80px rgba(0, 0, 0, 0.26)
 ;
+  position: sticky;
+  top: 0;
 }
 
 .section2 {
     width: 70%;
-    height: 12rem;
+    height: 8rem;
     /* background-color: aquamarine; */
     display: flex;
     flex-direction: column;
@@ -84,7 +85,10 @@ background: linear-gradient(to right, #F4D03F, #16A085); /* W3C, IE 10+/ Edge, F
     padding: 10px;
 }
 
-
+p
+{
+  padding-top: 20px;
+}
 .section3 {
     width: 70%;
     height: 20rem;
@@ -111,42 +115,84 @@ background: linear-gradient(to right, #F4D03F, #16A085); /* W3C, IE 10+/ Edge, F
     margin: 15px;
     padding: 10px;
 }
+.section5 {
+  width: 70%;
 
+  /* background-color: aquamarine; */
+  display: flex;
+  flex-direction: column;
+  /* padding: 10px; */
+}
 
+.list-style{
+  color: #85d84e;
+  font-size: xx-large;
+}
+.project-des
+{
+  padding-left: 5%;
+  border-style: solid;
+  border-color: #90e458;
+  border-radius: 10px;
+}
+.section5>ul>li{
+  top: 10px;
+}
+ul
+{
+  list-style-image: url('droplet-solid.svg');
+  padding-top: 15px;
+}
 .section-title {
     /* height: 10%; */
-    color: rgb(123, 192, 11);
-    font-weight: bold;
+    color: rgb(255, 255, 255);
+    background-color: #90e458;
+    font-weight: 15px;
+    border-radius: 10px;
+    width: 100%;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
 }
 
 
 .ed-table {
     width: 100%;
-    border-style: solid;
     border-color: #16A085;
-    border-collapse: collapse;
+    border-radius: 20px;
 }
 
 
 th,
 td {
     padding: 1rem;
-    border-style: solid;
-    border-radius: 10px;
+    
     border-color: #ffff00;
-    color:#f5f5f5;
+    background-color:#f5f5f5;
+    color: #000;
     justify-content: center;
     text-align: center;
     align-items: center;
+    border-radius: 20px;
 }
-table
+th
 {
-    
+  border-style:outset;
     background: #16A085;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #F4D03F, #16A085);  /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #F4D03F, #16A085); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    border-radius: 100px;
 
+}
+td
+{
+    
+    background: #cfddda;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #ffffff, #90e458);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #ffffff, #90e458); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+table{
+  padding-top: 10px;
 }
 
 .companies {
@@ -160,12 +206,12 @@ ul {
   .example-2 {
     display: flex-end;
     flex-direction: column;
-    gap:10px;
+    gap:30px;
     justify-content: center;
     align-items: center;
-    position: absolute;
+    position: fixed;
     bottom: 10px;
-
+    right: 10px;
   }
   .example-2 .icon-content {
     margin: 0 10px;
@@ -187,7 +233,7 @@ ul {
   .example-2 .icon-content:hover .tooltip {
     opacity: 1;
     visibility: visible;
-    top: -50px;
+    left: -50px;
   }
   .example-2 .icon-content a {
     position: relative;
